--- a/XinjingdailyBot.WebAPI/Properties/appService.json
+++ b/XinjingdailyBot.WebAPI/Properties/appService.json
@@ -132,7 +132,7 @@
   },
   "ImageHelperService": {
     "LifeTime": "Transient",
-    "Interface": "XinjingdailyBot.Interface.Helper.IImageHelperSErvice",
+    "Interface": "XinjingdailyBot.Interface.Helper.IImageHelperService",
     "Class": "XinjingdailyBot.Service.Helper.ImageHelperService"
   },
   "GroupRepository": {
