--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,10 @@
     <PackageVersion Include="NLog.Web.AspNetCore" Version="5.3.5" />
     <PackageVersion Include="Quartz" Version="3.8.0" />
     <PackageVersion Include="Quartz.AspNetCore" Version="3.8.0" />
+    <PackageVersion Include="SkiaSharp" Version="2.88.7" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.7" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.macOS" Version="2.88.7" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.Win32" Version="2.88.7" />
     <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
     <PackageVersion Include="SqlSugarCore" Version="5.1.4.136" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
