--- a/XinjingdailyBot.Service/XinjingdailyBot.Service.csproj
+++ b/XinjingdailyBot.Service/XinjingdailyBot.Service.csproj
@@ -7,6 +7,10 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
 		<PackageReference Include="Microsoft.Extensions.Http" />
+		<PackageReference Include="SkiaSharp" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" />
+		<PackageReference Include="SkiaSharp.NativeAssets.macOS" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Win32" />
 	</ItemGroup>
 
 	<ItemGroup>
