--- a/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
+++ b/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
@@ -63,6 +63,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Update="appsettings.Development.json">
+		  <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
 		<Content Update="nlog.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
