--- a/XinjingdailyBot.Generator/XinjingdailyBot.Generator.csproj
+++ b/XinjingdailyBot.Generator/XinjingdailyBot.Generator.csproj
@@ -5,6 +5,7 @@
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 		<IsRoslynComponent>true</IsRoslynComponent>
 		<GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
+		<NoWarn>CS1570;CS1587</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
