--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -21,9 +21,10 @@
     <PackageVersion Include="SkiaSharp.NativeAssets.macOS" Version="2.88.7" />
     <PackageVersion Include="SkiaSharp.NativeAssets.Win32" Version="2.88.7" />
     <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
-    <PackageVersion Include="SqlSugarCore" Version="5.1.4.136" />
+    <PackageVersion Include="SqlSugarCore" Version="5.1.4.137" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    <PackageVersion Include="System.Text.Json" Version="8.0.1" />
     <PackageVersion Include="Telegram.Bot" Version="20.0.0-alpha.1" />
   </ItemGroup>
 </Project>
