--- a/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
+++ b/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
@@ -16,9 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <AdditionalFiles Include="Properties\appService.json">
-	    <CopyToOutputDirectory></CopyToOutputDirectory>
-	  </AdditionalFiles>
+	  <AdditionalFiles Include="Properties\appService.json" />
 	  <AdditionalFiles Include="Properties\dbtable.json" />
 	  <AdditionalFiles Include="Properties\schedule.json" />
 	</ItemGroup>
