--- a/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
+++ b/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -6,6 +6,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="SqlSugarCore" />
+		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
