--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,30 +1,31 @@
 <Project>
-  <ItemGroup>
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageVersion Include="MySql.Data" Version="8.2.0" />
-    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="NLog" Version="5.2.8" />
-    <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.8" />
-    <PackageVersion Include="NLog.Web.AspNetCore" Version="5.3.5" />
-    <PackageVersion Include="Quartz" Version="3.8.0" />
-    <PackageVersion Include="Quartz.AspNetCore" Version="3.8.0" />
-    <PackageVersion Include="SkiaSharp" Version="2.88.7" />
-    <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.7" />
-    <PackageVersion Include="SkiaSharp.NativeAssets.macOS" Version="2.88.7" />
-    <PackageVersion Include="SkiaSharp.NativeAssets.Win32" Version="2.88.7" />
-    <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
-    <PackageVersion Include="SqlSugarCore" Version="5.1.4.137" />
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-    <PackageVersion Include="System.Text.Json" Version="8.0.1" />
-    <PackageVersion Include="Telegram.Bot" Version="20.0.0-alpha.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="ConfigureAwaitChecker.Analyzer" Version="5.0.0.1" />
+		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
+		<PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
+		<PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
+		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+		<PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+		<PackageVersion Include="MySql.Data" Version="8.2.0" />
+		<PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageVersion Include="NLog" Version="5.2.8" />
+		<PackageVersion Include="NLog.Extensions.Logging" Version="5.3.8" />
+		<PackageVersion Include="NLog.Web.AspNetCore" Version="5.3.5" />
+		<PackageVersion Include="Quartz" Version="3.8.0" />
+		<PackageVersion Include="Quartz.AspNetCore" Version="3.8.0" />
+		<PackageVersion Include="SkiaSharp" Version="2.88.7" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.7" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.macOS" Version="2.88.7" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.Win32" Version="2.88.7" />
+		<PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
+		<PackageVersion Include="SqlSugarCore" Version="5.1.4.137" />
+		<PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+		<PackageVersion Include="System.Text.Json" Version="8.0.1" />
+		<PackageVersion Include="Telegram.Bot" Version="20.0.0-alpha.1" />
+	</ItemGroup>
 </Project>
