--- a/XinjingdailyBot.Interface/XinjingdailyBot.Interface.csproj
+++ b/XinjingdailyBot.Interface/XinjingdailyBot.Interface.csproj
@@ -9,6 +9,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\XinjingdailyBot.Data\XinjingdailyBot.Data.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Infrastructure\XinjingdailyBot.Infrastructure.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Model\XinjingdailyBot.Model.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Repository\XinjingdailyBot.Repository.csproj" />
