--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,6 +19,7 @@
     <PackageVersion Include="Quartz.AspNetCore" Version="3.8.1" />
     <PackageVersion Include="SkiaSharp" Version="2.88.8" />
     <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.8" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
     <PackageVersion Include="SkiaSharp.NativeAssets.macOS" Version="2.88.8" />
     <PackageVersion Include="SkiaSharp.NativeAssets.Win32" Version="2.88.8" />
     <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
