--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,20 +50,20 @@ jobs:
       - name: Publish ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
         shell: pwsh
         run: |
-          $variant = '${{ matrix.arch }}'
+          $variant = "${{ matrix.arch }}"
+          $defines = "XJB_" + $variant.ToUpper().Replace("-", "_")
 
-          $commonArgs = '-p:PublishTrimmed=false'
+          $propertyArgs = "-p:DefineConstants=$defines -p:PublishTrimmed=false -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:ContinuousIntegrationBuild=true"
+          $commonArgs = "-r $variant ${{ env.PROJECT_NAME }} -c ${{ env.CONFIGURATION }} --no-restore --nologo"
 
-          $buildArgs = '-r', "$variant", '-p:PublishSingleFile=true', '-p:IncludeNativeLibrariesForSelfExtract=true'
-
-          dotnet publish ${{ env.PROJECT_NAME }} -c ${{ env.CONFIGURATION }} -o "./tmp/${{ env.PROJECT_NAME }}-fde" --self-contained=true -p:XJBVariant="$variant" -p:ContinuousIntegrationBuild=true --no-restore --nologo $commonArgs $buildArgs
-          dotnet publish ${{ env.PROJECT_NAME }} -c ${{ env.CONFIGURATION }} -o "./tmp/${{ env.PROJECT_NAME }}" --self-contained=false -p:XJBVariant="$variant" -p:ContinuousIntegrationBuild=true --no-restore --nologo $commonArgs $buildArgs
+          dotnet publish -o "./tmp/${{ env.PROJECT_NAME }}-fde" --self-contained=true $propertyArgs $commonArgs
+          dotnet publish -o "./tmp/${{ env.PROJECT_NAME }}" --self-contained=false $propertyArgs $commonArgs
 
       - name: Clean Xmls
         shell: pwsh
         run: |
-          Remove-Item './tmp/${{ env.PROJECT_NAME }}-fde/*.xml' 
-          Remove-Item './tmp/${{ env.PROJECT_NAME }}/*.xml' 
+          Remove-Item "./tmp/${{ env.PROJECT_NAME }}-fde/*.xml" 
+          Remove-Item "./tmp/${{ env.PROJECT_NAME }}/*.xml"
 
       - name: Zip files
         run: |
@@ -188,7 +188,7 @@ jobs:
         with:
           name: linux-arm64
           path: out
-            
+
       - name: Create ${{ env.PROJECT_NAME }} GitHub release
         uses: ncipollo/release-action@v1.12.0
         with:
@@ -200,10 +200,10 @@ jobs:
           body: |
             # 更新说明
             ![XinjingdailyBot Release](https://img.shields.io/badge/XinjingdailyBot-${{ github.ref_name }}-brightgreen) ![Downloads](https://img.shields.io/github/downloads/chr233/XinjingdailyBot/${{ github.ref_name }}/total?label=Downloads)
-            
+
             release created bt github actions
-            
+
             ---
-            
+
             > 带 `fde` 表示可执行文件内置 .net 框架, 可以脱离框架运行, 但是体积比较大
             > 如果电脑上已经安装过 .net 框架, 可以下载不带 `fde` 的版本, 节约硬盘空间
